--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "experimentalDecorators": true,
     "module": "esnext",
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
